왕인성 백준

--- a/insung/.project
+++ b/insung/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2WDA_FinTech_Project</name>
+	<name>etude</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1652196675530</id>
+			<id>1654091928349</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
